--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -3,7 +3,7 @@
 .header {
   width: 100%;
   height: 50px;
-  position: fixed;
+  position: relative;
   z-index: 2;
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
