--- a/sass/main.css
+++ b/sass/main.css
@@ -513,7 +513,7 @@ footer {
 .header {
   width: 100%;
   height: 50px;
-  position: fixed;
+  position: relative;
   z-index: 2;
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
