--- a/sass/main.css
+++ b/sass/main.css
@@ -817,7 +817,8 @@ footer {
   display: flex;
   position: relative;
   height: 60vh;
-  background-color: #7B9BA6;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(65%, #7B9BA6), to(#233656));
+  background: linear-gradient(to bottom, #7B9BA6 65%, #233656);
   padding-top: 50px;
 }
 
@@ -1094,7 +1095,8 @@ footer {
 .section__about--container {
   position: relative;
   top: 300px;
-  background-color: #7B9BA6;
+  background: -webkit-gradient(linear, left top, left bottom, from(#233656), color-stop(65%, #7B9BA6));
+  background: linear-gradient(to bottom, #233656, #7B9BA6 65%);
 }
 
 .section__about--text {
