--- a/sass/pages/_section.scss
+++ b/sass/pages/_section.scss
@@ -4,7 +4,8 @@
         display: flex;
         position: relative;
         height: 60vh;
-        background-color: #7B9BA6;
+        // background-color: #7B9BA6;
+        background: linear-gradient(to bottom, #7B9BA6 65%, #233656);
         padding-top: 50px;
 
         &--text {
@@ -212,7 +213,9 @@
         &--container {
             position: relative;
             top: 300px;
-            background-color: #7B9BA6;
+            // background-color: #7B9BA6;
+            background: linear-gradient(to bottom, #233656, #7B9BA6 65%);
+
         }
 
         &--text {
