--- a/sass/main.css
+++ b/sass/main.css
@@ -1003,6 +1003,12 @@ footer {
   }
 }
 
+@media (max-width: 600px) {
+  .section__start {
+    padding-top: 0px;
+  }
+}
+
 .section__technology {
   position: relative;
   top: 130px;
@@ -1086,12 +1092,6 @@ footer {
       -ms-flex-direction: column;
           flex-direction: column;
   font-size: 16px;
-}
-
-@media (max-width: 450px) {
-  .section__technology {
-    top: 250px;
-  }
 }
 
 .section__about--container {
