--- a/sass/pages/_section.scss
+++ b/sass/pages/_section.scss
@@ -128,6 +128,9 @@
         @include respond(tab-port) {
             flex-direction: column;
         }
+        @include respond(phone) {
+            padding-top: 0px;
+        }
     }  
     
     &__technology {
@@ -201,9 +204,6 @@
                     font-size: 16px;
                 }
             }
-        }
-        @include respond(small-screen) {
-            top: 250px;
         }
     }
 
