--- a/sass/pages/_section.scss
+++ b/sass/pages/_section.scss
@@ -189,24 +189,24 @@
                     transform: translate(-50%, -50%);
                     transition: all .4s;
 
-                    @include respond (small-screen) {
-                        width: 50%;
-                        height: 50%;
-                        transform: translate(-50%, -80%);
+                    @include respond(tab-port) {
+                        width: 40%;
+                        height: 40%;
+                        transform: translate(-50%, -80%);   
                     }
                 }
 
                 &:hover {
                     ion-icon {
                         transform: translate(-50%, -80%);
-                        width: 50%;
-                        height: 50%;
+                        width: 40%;
+                        height: 40%;
                     }
     
                     .icon-details {
                         bottom: 0;
                     }
-                }   
+                }  
                 @include respond (small-screen) {
                     height: 250px;
                 }         
@@ -223,13 +223,17 @@
                 padding-top: 20px;
                 background-color: #415B76; 
 
-                span {
-                    display: flex;
-                    flex-direction: column;
-                    font-size: 16px;
-                }
-                @include respond (small-screen) {
+                    span {
+                        display: flex;
+                        flex-direction: column;
+                        font-size: 16px;
+                    }
+
+                @include respond(tab-port) {
                     bottom: 0;
+                }
+
+                @include respond (small-screen) {
                     padding-top: 10px;
                 }
             }
