--- a/sass/pages/_section.scss
+++ b/sass/pages/_section.scss
@@ -12,7 +12,7 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-
+        // test
       .name {
         display: block;
         font-size: 5.5rem;
