--- a/sass/pages/_section.scss
+++ b/sass/pages/_section.scss
@@ -2,7 +2,7 @@
   &__start {
     display: flex;
     position: relative;
-    height: 60vh;
+    // height: 60vh;
     padding-top: 50px;
 
     &--text {
@@ -11,7 +11,7 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-        // test
+      // test
       .name {
         display: block;
         font-size: 5.5rem;
